variables.Variables.scala.error
Compilation error:
Variables:1: error: not found: value pas
pas=0;
^Variables:4: error: not found: value pas
  pas+=1;
  ^Variables:7: error: not found: value retour
retour=0;
^Variables:8: error: not found: value pas
while (pas!=retour) {
       ^Variables:8: error: not found: value retour
while (pas!=retour) {
            ^