variables.Variables.scala.code
pas=0;
while (isOverBaggle()==false) {
  forward();
  pas+=1;
}
pickupBaggle()
retour=0;
while (pas!=retour) {
  backward();
}